JG-2006-12-01-0: Bugfix:    qconf test failed if no "non_cluster_host" is 
                            available.
                            qrsh test failed on NetBSD and Interix.
                 Review:    RD

JG-2006-11-30-0: Bugfix:    - open_remote_spawn_process failed on some interix
                              version.
                            - commandline switch close_rlogin was broken
                 Enhancem.: sge.root propterty is no longer needed in 
                            build_testsuite.properties for java build
                 Review:    RD

HP-2006-11-28-0: Enhancem.: Added comment
                 Changed:   system_tests/windows/sgepasswd

HP-2006-11-27-0: Bugfix:    All keys from /var/sgeCA where moved away for this
                            test, now only the key for this particular test 
                            is moved away.
                 Changed:   sytem_tests/windows/sgepasswd

JG-2006-11-27-0: Bugfix:    The checktree_arco was moved to this project from
                            wrong ARCo branch (V60_ARCO_BRANCH, should have been
                            maintrunk).

RM-2006-11-27-0: Enhancem.: added test for sgepasswd binary for bugfix 6472859
                            system_tests/windows/sgepasswd
                 Review:    HP

CR-2006-11-24-2: Enhancem.: added test for issue 2122/6497217
                 Review:    RD

CR-2006-11-24-1: Cleanup:   added adoc headers and test remotely the 
                            availability of the testsuite java properties file 
                            for 65 version testing

CR-2006-11-24-0: Enhancem:  del_pe now supports raise_error 
                 Review:    RD

AA-2006-11-23-0: Enhancem:  move of arco testsuite checktree to testsuite 
                            subproject
                
CR-2006-11-23-2: Cleanup:   modified migrate test to always to the heartbeat
                            test in runlevel 0 - report exactly one warning