@@ -1,3 +1,6 @@
+RD-2006-12-01-0: Enhancem:  Added test for qacct -l h=<hostname> dump core
+                 Review:    JG
+
 JG-2006-12-01-0: Bugfix:    qconf test failed if no "non_cluster_host" is 
                             available.
                             qrsh test failed on NetBSD and Interix.
